# southdev-trader-strategyanalyzer

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  demo_parameter_variations.py  main.py  pyproject.toml  railway.json  requirements.txt  rsi_implementation.py  tutorial.py  vwap_implementation.py
data/: alpaca_client.py  database_client.py
database/: database_functions.py  database_testing.py
portfolio/: portfolio.py
strategies/: rsi_implementation.py  vwap_implementation.py
utils/: logger.py  terminal.py
