[project]
name = "southdev-trader-strategyanalyzer"
version = "0.1.0"
description = "Multi-timeframe trading strategy analyzer comparing RSI vs VWAP"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "vectorbtpro @ git+ssh://git@github.com/Southdev-tech/vectorbt.pro",
    "pandas>=1.5.0,<2.1.0",
    "numpy>=1.21.0,<1.25.0",
    "numba==0.56.4",
    "llvmlite==0.39.1",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.6.0,<3.8.0",
    "plotly>=5.17.0,<5.25.0",
    "alpaca-py>=0.40.0",
    "requests>=2.28.0",
    "exchange-calendars>=4.0.0",
    "yfinance>=0.2.0",
    "pytz>=2021.1",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
    "autoflake>=2.0.0",
    "autopep8>=2.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
    "autoflake>=2.0.0",
    "autopep8>=2.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "F541"]
